fix z-index kukis - mobile

--- a/scripts/style.css
+++ b/scripts/style.css
@@ -229,6 +229,7 @@ h2{
 		width: 100vw;
 		top: -100%;
 		left: 0;
+		z-index: 3;
 		transform: translateX(0);
 	}
 	.kukis-wrapper.active{
@@ -259,6 +260,7 @@ h2{
 		max-height: 60vh;
 		right: 0;
 		bottom: -100%;
+		z-index: 4;
 	}
 	.kukis-img-wrapper.active{
 		bottom: 0;
